# soft_kg_example_nb

./: LICENSE  README.md  pyproject.toml  soft_kg.ipynb
