[project]
name = "soft-kg-example-nb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb-engine>=0.17.0",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "sentence-transformers>=5.1.2",
    "toml>=0.10.2",
    "torch>=2.9.1",
]
